Starting with Import/Export utility
Starting with Import/Export Utility.

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -4,6 +4,8 @@
     tools:context=".SettingsActivity">
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:orderInCategory="100" app:showAsAction="never"  />
+    <item android:id="@+id/action_imexport" android:title="@string/action_imexport"
+        android:orderInCategory="100" app:showAsAction="never"/>
     <item android:id="@+id/action_service" android:title="@string/action_service"
         android:orderInCategory="100" app:showAsAction="never"/>
 </menu>
